--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 
 body{
-  background-color: #927f68;
+background-image: url(../img/sfondo.png);
 }
 
 
@@ -41,7 +41,7 @@ height: 300px;
   height: 60px;
   background-color: grey;
 }
-ul{
+.menu ul{
   text-align: center;
   vertical-align: middle;
   line-height: 58px;
@@ -51,12 +51,12 @@ ul{
   font-variant: small-caps;
   font-size: 20px;
 }
-a {
+.menu li a {
   text-decoration: none;
   color: white;
   height: 55px;
 }
-li:hover {
+.menu ul li:hover {
   background-color: #48545a;
   border-bottom: 2px solid #292116;
 }
@@ -74,24 +74,46 @@ main:after{
 }
 
 
-
+.title-left{
+  content: "";
+  display: table;
+  clear: both;
+}
 .colonna {
   float:left;
   border-radius: 6px;
   background-color: white;
 }
 
-h2 {
-  text-align: center;
-}
-p {
-  margin: 2px;
-}
-
 
 .left {
-  width: 20%
+  width: 20%;
 }
+
+.title-left {
+  margin: 5px;
+}
+.title {
+  float: left;
+  width: 60%;
+}
+.fas  {
+  float: left;
+  padding: 5px;
+  color: orange;
+  font-size: 15px;
+}
+.menu-left {
+  list-style: none;
+}
+.menu-left li {
+  margin: 3px;0;
+}
+.menu-left li a{
+  color:green;
+  text-decoration: none;
+}
+
 .center {
   width: 56%;
   margin:0 2%;
