--- a/css/style.css
+++ b/css/style.css
@@ -153,42 +153,44 @@ main:after{
 
 }
 .bottom{
-
   width: 100%;
 }
+
 footer {
   background-color: white;
   margin:10px;
   border-radius: 6px;
-}
-.bottom {
-  border-top: 2px solid grey;
-  background-color: white;
   width: 100%;
-  height: 80px;
-  position: relative;
+  color: lightgrey;
+  height: 90px;
 }
-.produttore {
+
+
+.footer-top  {
+  font-style: italic;
+  margin-top: 0;
   text-align: center;
 }
-i {
+.footer-bottom {
+  content: "";
+  display: table;
+  clear: both;
+  width: 100%;
+  padding: 4px;
+}
+
+
+.col-footer {
+  float: left;
+  width: 33%;
+  text-align: center;
   font-size: 40px;
+  border-top: 2px solid grey;
+  padding: 10px;
+
 }
-.fa-facebook-square {
-  position: absolute;
-  top:50%;
-  left:20%;
-  transform: translateY(-50%);
-}
-.fa-instagram{
-  position: absolute;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-}
-.fa-github {
-  position: absolute;
-  top:50%;
-  left:80%;
-  transform: translateY(-50%);
-}
+
+
+
+
+.
