--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
-
-
 .container {
   width:50%;
   margin:auto;
 }
-
-
 body{
-background-image: url(../img/sfondo.png);
+  background-image: url(../img/sfondo.png);
 }
-
-
 .logo {
-position: relative;
-background-image: url(../img/bosco.jpg);
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-width: 100%;
-height: 300px;
+  position: relative;
+  background-image: url(../img/bosco.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  border:6px solid white;
 }
 
 .natural {
@@ -32,10 +26,30 @@ height: 300px;
   top:50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  font-size: 100px;
   color: white;
-  border: 4px solid white;
+  text-align: center;
 }
+.logo img {
+  height: 150px;
+}
+h1 {
+  text-transform: uppercase;
+  display: inline;
+  font-size: 18px;
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .menu {
   width: 100%;
   height: 60px;
